# FlexPass

./: README.md  docker-compose.yml  pyproject.toml
.old-apps/classroom/: admin.py  models.py
.old-apps/user/: forms.py  models.py  urls.py  views.py
flexpass/: asgi.py  settings.py  urls.py
moderators/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
moderators/migrations/: 0001_initial.py  0002_initial.py  0003_moderator_reviewed_requests.py  0004_remove_moderator_reviewed_requests.py  0005_moderator_is_archived.py
moderators/templates/: moderator_menu.html  pending_requests.html
rooms/: CalExport.ics  admin.py  consumers.py  forms.py  models.py  routing.py  scheduling.py  tests.py  urls.py  utils.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_room_join_code.py  0004_remove_request_time_of_request_request_created_at_and_more.py  0005_request_is_archived_request_origin_request_returned_and_more.py
rooms/templates/: request.html  request_list.html  room_list.html
static/css/: style.css
students/: consumers.py  models.py  routing.py  tests.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_remove_student_flex_active_student_is_archived.py
students/templates/: request_history.html  student_menu.html
theme/templates/: base.html
users/: forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_is_moderator.py
users/templates/: account.html  base.html  form_login.html  login.html  register.html  staff.html  student.html
(+13 files in other folders)
