[project]
name = "flexpass"
version = "0.1.0"
description = "PCHS Flex Coordination"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.4.0",
    "django>=5.2.7",
    "django-push-notifications[apns-async,fcm,wp]>=3.3.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.3.1",
    "faker>=38.2.0",
    "ics>=0.7.2",
    "psycopg[binary]>=3.2.11",
]
